<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_judul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_row1"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_b" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_C"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_D"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_d" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_row2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-11dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_row1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_E"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_e" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_F"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_f" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_G"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_g" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_H"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_h" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_row3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-11dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_row2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_I"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_i" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_J"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_j" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_K"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_k" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_L"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_l" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_row4"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-11dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_row3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_M"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_m" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_N"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_n" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_O"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b_o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_blank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>